--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "dependencies": {
     "@types/axios": "^0.14.0",
     "autoprefixer": "^10.4.19",
@@ -33,3 +36,5 @@
     "typescript": "^5"
   }
 }
+
+
